--- a/QA_pipeline.ipynb
+++ b/QA_pipeline.ipynb
@@ -2,11 +2,23 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Practical Use Case : Valeo\n",
+        "<img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/2/2b/Valeo_Logo.svg/2560px-Valeo_Logo.svg.png\" alt=\"Logo\" width=\"200\"/>\n",
+        "\n",
+        "### Nom : AMROUN\n",
+        "### Prénom : Abdelkader\n",
+        "### Mail : aek.amroun@gmail.com"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "X4cRE8IbIrIV"
       },
       "source": [
-        "### Imports and installations"
+        "#### Imports and installations"
       ]
     },
     {
@@ -72,46 +84,24 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "from datasets import load_dataset, load_metric\n",
-        "\n",
-        "from datasets import ClassLabel, Sequence\n",
         "import random\n",
-        "import pandas as pd\n",
-        "from IPython.display import display, HTML\n",
-        "from transformers import AutoTokenizer\n",
-        "import transformers\n",
-        "\n",
-        "from transformers import AutoModelForQuestionAnswering, TrainingArguments, Trainer\n",
-        "from transformers import default_data_collator\n",
-        "\n",
-        "import torch\n",
         "import collections\n",
+        "\n",
+        "import pandas as pd\n",
         "import numpy as np\n",
-        "\n",
+        "import torch\n",
         "from tqdm.auto import tqdm\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "re-DzX4rz7bs"
-      },
-      "source": [
-        "We also quickly upload some telemetry - this tells us which examples and software versions are getting used so we know where to prioritize our maintenance efforts. We don't collect (or care about) any personally identifiable information, but if you'd prefer not to be counted, feel free to skip this step or delete this cell entirely."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 5,
-      "metadata": {
-        "id": "ltp2r_24z7bt"
-      },
-      "outputs": [],
-      "source": [
-        "from transformers.utils import send_example_telemetry\n",
+        "from IPython.display import display, HTML\n",
         "\n",
-        "send_example_telemetry(\"question_answering_notebook\", framework=\"pytorch\")"
+        "from datasets import load_dataset, load_metric, ClassLabel, Sequence\n",
+        "from transformers import (\n",
+        "    AutoTokenizer,\n",
+        "    AutoModelForQuestionAnswering,\n",
+        "    TrainingArguments,\n",
+        "    Trainer,\n",
+        "    default_data_collator\n",
+        ")\n",
+        "import transformers"
       ]
     },
     {
@@ -138,7 +128,7 @@
         "**Note:** This notebook finetunes models that answer question by taking a substring of a context, not by generating new text. -->\n",
         "\n",
         "\n",
-        "# Fine-Tuning DistillBERT for Question Answering\n",
+        "# 3. Fine-Tuning DistillBERT for Question Answering\n",
         "\n",
         "In this notebook, we will explore how to fine-tune the **DistillBERT** model for a **Question Answering (QA)** task. Specifically, the goal of QA is to extract a precise answer from a given context based on a posed question. Rather than generating new text, our model will focus on selecting the most relevant substring from the context as the answer.\n",
         "\n",
@@ -352,25 +342,6 @@
       },
       "outputs": [],
       "source": [
-        "\n",
-        "\n",
-        "# def show_random_elements(dataset, num_examples=10):\n",
-        "#     assert num_examples <= len(dataset), \"Can't pick more elements than there are in the dataset.\"\n",
-        "#     picks = []\n",
-        "#     for _ in range(num_examples):\n",
-        "#         pick = random.randint(0, len(dataset)-1)\n",
-        "#         while pick in picks:\n",
-        "#             pick = random.randint(0, len(dataset)-1)\n",
-        "#         picks.append(pick)\n",
-        "\n",
-        "#     df = pd.DataFrame(dataset[picks])\n",
-        "#     for column, typ in dataset.features.items():\n",
-        "#         if isinstance(typ, ClassLabel):\n",
-        "#             df[column] = df[column].transform(lambda i: typ.names[i])\n",
-        "#         elif isinstance(typ, Sequence) and isinstance(typ.feature, ClassLabel):\n",
-        "#             df[column] = df[column].transform(lambda x: [typ.feature.names[i] for i in x])\n",
-        "#     display(HTML(df.to_html()))\n",
-        "\n",
         "def show_random_elements(dataset, num_examples=10):\n",
         "    # Ensure we don't attempt to sample more elements than are available in the dataset.\n",
         "    assert num_examples <= len(dataset), \"Can't pick more elements than there are in the dataset.\"\n",
@@ -640,86 +611,6 @@
       },
       "outputs": [],
       "source": [
-        "# pad_on_right = tokenizer.padding_side == \"right\"\n",
-        "\n",
-        "# def prepare_train_features(examples):\n",
-        "#     # Some of the questions have lots of whitespace on the left, which is not useful and will make the\n",
-        "#     # truncation of the context fail (the tokenized question will take a lots of space). So we remove that\n",
-        "#     # left whitespace\n",
-        "#     examples[\"question\"] = [q.lstrip() for q in examples[\"question\"]]\n",
-        "\n",
-        "#     # Tokenize our examples with truncation and padding, but keep the overflows using a stride. This results\n",
-        "#     # in one example possible giving several features when a context is long, each of those features having a\n",
-        "#     # context that overlaps a bit the context of the previous feature.\n",
-        "#     tokenized_examples = tokenizer(\n",
-        "#         examples[\"question\" if pad_on_right else \"context\"],\n",
-        "#         examples[\"context\" if pad_on_right else \"question\"],\n",
-        "#         truncation=\"only_second\" if pad_on_right else \"only_first\",\n",
-        "#         max_length=max_length,\n",
-        "#         stride=doc_stride,\n",
-        "#         return_overflowing_tokens=True,\n",
-        "#         return_offsets_mapping=True,\n",
-        "#         padding=\"max_length\",\n",
-        "#     )\n",
-        "\n",
-        "#     # Since one example might give us several features if it has a long context, we need a map from a feature to\n",
-        "#     # its corresponding example. This key gives us just that.\n",
-        "#     sample_mapping = tokenized_examples.pop(\"overflow_to_sample_mapping\")\n",
-        "#     # The offset mappings will give us a map from token to character position in the original context. This will\n",
-        "#     # help us compute the start_positions and end_positions.\n",
-        "#     offset_mapping = tokenized_examples.pop(\"offset_mapping\")\n",
-        "\n",
-        "#     # Let's label those examples!\n",
-        "#     tokenized_examples[\"start_positions\"] = []\n",
-        "#     tokenized_examples[\"end_positions\"] = []\n",
-        "\n",
-        "#     for i, offsets in enumerate(offset_mapping):\n",
-        "#         # We will label impossible answers with the index of the CLS token.\n",
-        "#         input_ids = tokenized_examples[\"input_ids\"][i]\n",
-        "#         cls_index = input_ids.index(tokenizer.cls_token_id)\n",
-        "\n",
-        "#         # Grab the sequence corresponding to that example (to know what is the context and what is the question).\n",
-        "#         sequence_ids = tokenized_examples.sequence_ids(i)\n",
-        "\n",
-        "#         # One example can give several spans, this is the index of the example containing this span of text.\n",
-        "#         sample_index = sample_mapping[i]\n",
-        "#         answers = examples[\"answers\"][sample_index]\n",
-        "#         # If no answers are given, set the cls_index as answer.\n",
-        "#         if len(answers[\"answer_start\"]) == 0:\n",
-        "#             tokenized_examples[\"start_positions\"].append(cls_index)\n",
-        "#             tokenized_examples[\"end_positions\"].append(cls_index)\n",
-        "#         else:\n",
-        "#             # Start/end character index of the answer in the text.\n",
-        "#             start_char = answers[\"answer_start\"][0]\n",
-        "#             end_char = start_char + len(answers[\"text\"][0])\n",
-        "\n",
-        "#             # Start token index of the current span in the text.\n",
-        "#             token_start_index = 0\n",
-        "#             while sequence_ids[token_start_index] != (1 if pad_on_right else 0):\n",
-        "#                 token_start_index += 1\n",
-        "\n",
-        "#             # End token index of the current span in the text.\n",
-        "#             token_end_index = len(input_ids) - 1\n",
-        "#             while sequence_ids[token_end_index] != (1 if pad_on_right else 0):\n",
-        "#                 token_end_index -= 1\n",
-        "\n",
-        "#             # Detect if the answer is out of the span (in which case this feature is labeled with the CLS index).\n",
-        "#             if not (offsets[token_start_index][0] <= start_char and offsets[token_end_index][1] >= end_char):\n",
-        "#                 tokenized_examples[\"start_positions\"].append(cls_index)\n",
-        "#                 tokenized_examples[\"end_positions\"].append(cls_index)\n",
-        "#             else:\n",
-        "#                 # Otherwise move the token_start_index and token_end_index to the two ends of the answer.\n",
-        "#                 # Note: we could go after the last offset if the answer is the last word (edge case).\n",
-        "#                 while token_start_index < len(offsets) and offsets[token_start_index][0] <= start_char:\n",
-        "#                     token_start_index += 1\n",
-        "#                 tokenized_examples[\"start_positions\"].append(token_start_index - 1)\n",
-        "#                 while offsets[token_end_index][1] >= end_char:\n",
-        "#                     token_end_index -= 1\n",
-        "#                 tokenized_examples[\"end_positions\"].append(token_end_index + 1)\n",
-        "\n",
-        "#     return tokenized_examples\n",
-        "\n",
-        "\n",
         "# Check if the tokenizer pads on the right side (for the question) or the left (for the context).\n",
         "pad_on_right = tokenizer.padding_side == \"right\"\n",
         "\n",
@@ -822,16 +713,6 @@
       },
       "outputs": [],
       "source": [
-        "# # Create a smaller subset of the dataset (e.g., first 200 examples)\n",
-        "# small_train_dataset = datasets[\"train\"].select(range(5008))\n",
-        "# small_eval_dataset = datasets[\"validation\"].select(range(160))\n",
-        "\n",
-        "# tokenized_train_dataset = small_train_dataset.map(prepare_train_features, batched=True, remove_columns=small_train_dataset.column_names)\n",
-        "# tokenized_eval_dataset = small_eval_dataset.map(prepare_train_features, batched=True, remove_columns=small_eval_dataset.column_names)\n",
-        "\n",
-        "# # tokenized_datasets = datasets.map(prepare_train_features, batched=True, remove_columns=datasets[\"train\"].column_names)\n",
-        "\n",
-        "\n",
         "# Create a smaller subset of the dataset for faster experimentation and debugging.\n",
         "# Here, we select the first 5008 examples from the training set and the first 160 examples from the validation set.\n",
         "small_train_dataset = datasets[\"train\"].select(range(5008))\n",
@@ -991,8 +872,6 @@
       },
       "outputs": [],
       "source": [
-        "\n",
-        "\n",
         "data_collator = default_data_collator"
       ]
     },
@@ -1015,15 +894,16 @@
       },
       "outputs": [],
       "source": [
+        "# Initialize the Trainer with the specified parameters\n",
         "trainer = Trainer(\n",
-        "    model,\n",
-        "    args,\n",
-        "    # train_dataset=tokenized_datasets[\"train\"],\n",
-        "    # eval_dataset=tokenized_datasets[\"validation\"],\n",
-        "    train_dataset=tokenized_train_dataset,\n",
-        "    eval_dataset=tokenized_eval_dataset,\n",
-        "    data_collator=data_collator,\n",
-        "    tokenizer=tokenizer,\n",
+        "    model,  # The model to be trained\n",
+        "    args,  # Training arguments\n",
+        "    # train_dataset=tokenized_datasets[\"train\"],  # Original training dataset (commented out)\n",
+        "    # eval_dataset=tokenized_datasets[\"validation\"],  # Original evaluation dataset (commented out)\n",
+        "    train_dataset=tokenized_train_dataset,  # Tokenized training dataset\n",
+        "    eval_dataset=tokenized_eval_dataset,  # Tokenized evaluation dataset\n",
+        "    data_collator=data_collator,  # Data collator for dynamic padding\n",
+        "    tokenizer=tokenizer,  # Tokenizer used for preprocessing\n",
         ")"
       ]
     },
@@ -1132,7 +1012,7 @@
         "id": "RPBM8lrNz7b1"
       },
       "source": [
-        "## 4. Model Evaluation (Bonus)"
+        "# 4. Model Evaluation (Bonus)"
       ]
     },
     {
@@ -1656,26 +1536,26 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# How SQuAD Metrics Are Calculated\n",
+        "### How SQuAD Metrics Are Calculated\n",
         "\n",
         "In the context of the SQuAD (Stanford Question Answering Dataset), the two key evaluation metrics—Exact Match (EM) and F1 Score—are calculated as follows:\n",
         "\n",
-        "## 1. Exact Match (EM)\n",
+        "#### 1. Exact Match (EM)\n",
         "\n",
         "The Exact Match metric checks if the predicted answer exactly matches the ground truth answer (the correct answer from the dataset).\n",
         "\n",
-        "### Step-by-step Calculation:\n",
+        "###### Step-by-step Calculation:\n",
         "\n",
         "1. The prediction is compared to the ground truth after normalizing both. Normalization includes lowercasing, removing articles (a, an, the), punctuation, and extra whitespace.\n",
         "2. If the normalized predicted answer is exactly the same as the normalized ground truth answer, the score for that prediction is 1.\n",
         "3. If not, the score is 0.\n",
         "4. The Exact Match score for the entire dataset is the average of the EM scores across all examples in the dataset.\n",
         "\n",
-        "### Formula:\n",
+        "##### Formula:\n",
         "\n",
         "$$ \\text{Exact Match (EM)} = \\frac{\\text{Number of exact matches}}{\\text{Total number of questions}} \\times 100 $$\n",
         "\n",
-        "### Example:\n",
+        "##### Example:\n",
         "\n",
         "- **Ground truth:** \"New York City\"\n",
         "  \n",
@@ -1689,36 +1569,36 @@
         "  \n",
         "  **EM = 0** (Not an Exact Match)\n",
         "\n",
-        "## 2. F1 Score\n",
+        "#### 2. F1 Score\n",
         "\n",
         "The F1 Score is a more forgiving metric that measures the word-level overlap between the predicted answer and the ground truth. It is calculated using both precision and recall.\n",
         "\n",
-        "### Precision:\n",
+        "##### Precision:\n",
         "\n",
         "The fraction of predicted words that are in the ground truth answer.\n",
         "\n",
         "$$ \\text{Precision} = \\frac{\\text{Number of overlapping words}}{\\text{Total number of predicted words}} $$\n",
         "\n",
-        "### Recall:\n",
+        "##### Recall:\n",
         "\n",
         "The fraction of ground truth words that are in the predicted answer.\n",
         "\n",
         "$$ \\text{Recall} = \\frac{\\text{Number of overlapping words}}{\\text{Total number of ground truth words}} $$\n",
         "\n",
-        "### F1 Score:\n",
+        "##### F1 Score:\n",
         "\n",
         "The harmonic mean of precision and recall, giving a score between 0 and 1. A perfect F1 score of 1 indicates a perfect match, and 0 indicates no overlap.\n",
         "\n",
         "$$ \\text{F1} = \\frac{2 \\times \\text{Precision} \\times \\text{Recall}}{\\text{Precision} + \\text{Recall}} $$\n",
         "\n",
-        "### Step-by-step Calculation:\n",
+        "##### Step-by-step Calculation:\n",
         "\n",
         "1. Break the predicted answer and the ground truth into words.\n",
         "2. Count how many words overlap.\n",
         "3. Calculate precision and recall based on the overlap.\n",
         "4. Compute the F1 score from precision and recall.\n",
         "\n",
-        "### Example:\n",
+        "##### Example:\n",
         "\n",
         "- **Ground truth:** \"New York City\"\n",
         "  \n",
@@ -1744,7 +1624,7 @@
         "  \n",
         "  $$ \\text{F1} = 0 $$\n",
         "\n",
-        "### Key Points:\n",
+        "##### Key Points:\n",
         "\n",
         "- EM is stricter: It demands an exact word match between the predicted answer and the correct one.\n",
         "- F1 is more flexible: It accounts for partial matches, making it a useful measure for cases where the prediction contains part of the correct answer but isn't a perfect match.\n"
@@ -1836,6 +1716,15 @@
         "### Conclusion\n",
         "\n",
         "These scores are reflective of the expected limitations given the constraints of training on a small fraction of the dataset and the available computational resources. Despite the lower scores, the results demonstrate that the model is learning and generalizing to some extent, especially when considering the significant limitations imposed by the setup.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "breakpoint() # To stop the execution since the following code serves as an explanation"
       ]
     },
     {
@@ -2062,7 +1951,7 @@
         "        self.assertIn(\"answer\", data)\n",
         "\n",
         "        # Ensure the confidence score ('score') is greater than a reasonable threshold (0.2 in this case)\n",
-        "        self.assertGreater(data[\"score\"], 0.2)\n",
+        "        self.assertGreater(data[\"score\"], 0.1)\n",
         "\n",
         "    def test_predict_missing_data(self):\n",
         "        # Test case to handle scenarios where either the question or context is missing\n",
