--- a/QA_pipeline.ipynb
+++ b/QA_pipeline.ipynb
@@ -4,9 +4,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Practical Use Case : Valeo\n",
-        "<img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/2/2b/Valeo_Logo.svg/2560px-Valeo_Logo.svg.png\" alt=\"Logo\" width=\"200\"/>\n",
-        "\n",
+        "# DistillBert QA : Training, Eval & Deployment\n",
         "### Nom : AMROUN\n",
         "### Prénom : Abdelkader\n",
         "### Mail : aek.amroun@gmail.com"
